refactor: 资源库统一管理 + 虚拟线程 + 日志优化 + 路径规范化
- 统一资源库管理: 合并 MediaLibraryController 和 LibraryController 到 /api/v1/media-libraries, 支持 CRUD + 扫描 + 目录浏览
- MediaLibrary type 扩展: 支持 MUSIC/COMIC/VIDEO/EBOOK, 新增 subType 字段区分视频子类型
- 虚拟线程: Spring Boot 全局开启, TMDB scraper 和 watcher 改为 VirtualThreadPerTaskExecutor, 移除 scraper-threads 配置
- 浏览目录: 默认从用户主目录开始, 去掉硬编码默认路径
- 视频系列接口: 返回独立电影(standalone), 新增 type 字段区分系列和独立视频, VideoDTO 增加 libraryId
- 日志优化: 删除冗余 hub.log appender, 逐文件日志从 INFO 降为 DEBUG, 清理音乐模块中英混杂日志, 修复异常堆栈丢失
- 路径规范化: 扫描和整理时用 toAbsolutePath().normalize() 消除 ./ 前缀, 修复数据库重复记录
- 废弃接口清理: 移除各模块 rescan 端点、video cleanup 端点、rescrape-all 端点
- 新增日志导出接口: GET /api/v1/logs 列表, GET /api/v1/logs/{fileName} 下载
- SQLite WAL + busy_timeout 配置优化
- HikariCP 连接池调整
- 部分更新 API 支持 null 值保护